<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <!-- Expense Name -->
    <TextView
        android:id="@+id/textViewExpenseNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expense name"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextExpenseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter expense name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpenseNameLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Expense Month -->
    <TextView
        android:id="@+id/textViewExpenseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expense Month"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpenseName"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpenseDateLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Expense Category -->
    <TextView
        android:id="@+id/textViewExpenseCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expense Category"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMonth"
        android:layout_marginStart="16dp"/>

    <Spinner
        android:id="@+id/spinnerExpenseCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpenseCategoryLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Expense Amount -->
    <TextView
        android:id="@+id/textViewExpenseAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Expense Amount"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerExpenseCategory"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextExpenseAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter expense amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpenseAmountLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/buttonSubmitExpense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExpenseAmount"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>