<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoalActivity">

    <!-- Goal Name -->
    <TextView
        android:id="@+id/textViewGoalNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Goal Name"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextGoalName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter goal name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoalNameLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Goal Description -->
    <TextView
        android:id="@+id/textViewGoalDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGoalName"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextGoalDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter goal description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGoalDescriptionLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Monthly Amount Set Aside -->
    <TextView
        android:id="@+id/textViewMonthlyAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Monthly Amount Set Aside"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGoalDescription"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextMonthlyAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter monthly amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMonthlyAmountLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Amount to be Collected -->
    <TextView
        android:id="@+id/textViewTargetAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Amount to be Collected"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMonthlyAmount"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/editTextTargetAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter target amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTargetAmountLabel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/buttonSubmitGoal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTargetAmount"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
